Autofocus on fire form input. Add event handler to fire button to send command to controller.

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
 		<!--Form for user input-->
 		<form>
-			<input type="text" id="guess-input" placeholder="A0">
+			<input type="text" id="guess-input" placeholder="A0" autofocus>
 			<input type="button" id="fire-button" value="Fire!">
 		</form>
 	</div>
